--- a/chapter.tex
+++ b/chapter.tex
@@ -854,9 +854,8 @@ simply means ``count'' in this context; and 3) creates a new spatial
 object equivalent to \texttt{lnd} but with updated attribute data to
 reflect the results of the spatial aggregation. The results, with a
 legend and colours added, are presented in Figure 9 below. The code used
-below involves a number of steps that we have not yet covered. Copy
-these to create the map and they will be explained in Section 3 of the
-tutorial.
+to create this plot is rather long; it can be viewed online:
+http://rpubs.com/RobinLovelace/11738 .
 
 \begin{figure}[htbp]
 \centering
@@ -881,7 +880,7 @@ symbol:
 In this case we have three potentially interesting variables:
 ``LEGEND'', telling us what the point is, ``NAME'', and ``MICE'', which
 represents the number of mice sightings reported by the public at that
-point (this is a fictional variable!!). To illustrate the power of the
+point (this is a fictional variable!). To illustrate the power of the
 \texttt{aggregate} function, let us use it to find the average number of
 mice spotted in transport points in each London borough, and the
 standard deviation:
@@ -994,23 +993,27 @@ saved in the data folder, we can proceed to load the data.
 \caption{A Basic Map of the World}
 \end{figure}
 
-To see the first ten rows of attribute information assocuiated with each
-of the country boundaries type the following:
+Let's see a sample of the attribute data and remove the Falklands and
+French Southern and Antarctic Lands (to demonstrate the method - type
+\texttt{?regex} if interested how this works - and because these
+countries cause continent mis-assignment later on):
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{head}\NormalTok{(wrld@data)[, }\DecValTok{1}\NormalTok{:}\DecValTok{5}\NormalTok{]}
+\KeywordTok{head}\NormalTok{(wrld@data)[}\DecValTok{1}\NormalTok{:}\DecValTok{3}\NormalTok{, }\DecValTok{1}\NormalTok{:}\DecValTok{5}\NormalTok{]}
 \end{Highlighting}
 \end{Shaded}
 \begin{verbatim}
-##   scalerank      featurecla labelrank           sovereignt sov_a3
-## 0         1 Admin-0 country         3          Afghanistan    AFG
-## 1         1 Admin-0 country         3               Angola    AGO
-## 2         1 Admin-0 country         6              Albania    ALB
-## 3         1 Admin-0 country         4 United Arab Emirates    ARE
-## 4         1 Admin-0 country         2            Argentina    ARG
-## 5         1 Admin-0 country         6              Armenia    ARM
+##   scalerank      featurecla labelrank  sovereignt sov_a3
+## 0         1 Admin-0 country         3 Afghanistan    AFG
+## 1         1 Admin-0 country         3      Angola    AGO
+## 2         1 Admin-0 country         6     Albania    ALB
 \end{verbatim}
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{wrld <- wrld[!}\KeywordTok{grepl}\NormalTok{(}\StringTok{"Falk\textbar{}French Southern"}\NormalTok{, wrld$name_long), ]}
+\end{Highlighting}
+\end{Shaded}
 You can see there are a lot of columns associated with this file.
 Although we will keep all of them, we are only really interested in the
 population estimate (``pop\_est'') field. Before progressing it is is
@@ -1108,7 +1111,7 @@ useful command:
 \begin{Highlighting}[]
 \CommentTok{# Produce a map of continents}
 \NormalTok{map.cont <- }\KeywordTok{ggplot}\NormalTok{(wrld.pop.f, }\KeywordTok{aes}\NormalTok{(long, lat, }\DataTypeTok{group =} \NormalTok{group, }\DataTypeTok{fill =} \NormalTok{continent)) + }
-    \KeywordTok{geom_polygon}\NormalTok{() + }\KeywordTok{coord_equal}\NormalTok{() + }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Longitude"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Latitude"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"World Population"}\NormalTok{) + }
+    \KeywordTok{geom_polygon}\NormalTok{() + }\KeywordTok{coord_equal}\NormalTok{() + }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \StringTok{"Longitude"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"Latitude"}\NormalTok{, }\DataTypeTok{fill =} \StringTok{"World Continents"}\NormalTok{) + }
     \KeywordTok{ggtitle}\NormalTok{(}\StringTok{"World Continents"}\NormalTok{)}
 
 \CommentTok{# To see the default colours}
@@ -1183,10 +1186,10 @@ function from the gridExtra package to display the maps side by side.
 \end{Shaded}
 \begin{verbatim}
 ## style: quantile
-##        [-99,1790208)    [1790208,4579439)    [4579439,9035536) 
-##                   30                   29                   29 
-##   [9035536,16639804)  [16639804,40784057) [40784057,1.339e+09] 
-##                   30                   29                   30
+##        [-99,1990876)    [1990876,4615807)    [4615807,9059651) 
+##                   29                   29                   29 
+##   [9059651,16715999)  [16715999,40913584) [40913584,1.339e+09] 
+##                   29                   29                   30
 \end{verbatim}
 \begin{Shaded}
 \begin{Highlighting}[]
