--- a/Section2_R_and_Spatial_Data.Rmd
+++ b/Section2_R_and_Spatial_Data.Rmd
@@ -290,6 +290,7 @@ type the following:
 ```{r, eval=FALSE}
 proj4string(lnd)
 ```
+
 ```{r, echo=FALSE}
 strtrim(proj4string(lnd), width=85)
 ```
@@ -505,7 +506,9 @@ perform a function on the output, in this case `length`, which simply
 means "count" in this context; and 3) creates a new spatial object
 equivalent to `lnd` but with updated attribute data to reflect the
 results of the spatial aggregation. The results, with a legend and
-colours added, are presented in Figure 9 below. The code used below involves a number of steps that we have not yet covered. Copy these to create the map and they will be explained in Section 3 of the tutorial.
+colours added, are presented in Figure 9 below. 
+The code used to create this plot is rather long; it can be 
+viewed online: http://rpubs.com/RobinLovelace/11738 . 
 
 ```{r Choropleth map of number of transport nodes in London boroughs, echo=F, eval=FALSE}
 library(RColorBrewer)
@@ -533,7 +536,7 @@ head(lnd.stations@data, n = 2)
 In this case we have three potentially interesting variables: "LEGEND",
 telling us what the point is, "NAME", and "MICE", which represents the
 number of mice sightings reported by the public at that point (this is a
-fictional variable!!). To illustrate the power of the `aggregate`
+fictional variable!). To illustrate the power of the `aggregate`
 function, let us use it to find the average number of mice spotted in
 transport points in each London borough, and the standard deviation:
 
