--- a/Section3_Spatial_Dataviz.Rmd
+++ b/Section3_Spatial_Dataviz.Rmd
@@ -59,10 +59,14 @@ wrld <- readOGR("data/", "ne_110m_admin_0_countries")
 plot(wrld)
 ```
 
-To see the first ten rows of attribute information assocuiated with each of the country boundaries type the following:
+Let's see a sample of the attribute data 
+and remove the Falklands and French Southern and Antarctic Lands
+(to demonstrate the method - type `?regex` if interested how this works
+- and because these countries cause continent mis-assignment later on):
 
 ```{r}
-head(wrld@data)[,1:5]
+head(wrld@data)[1:3,1:5]
+wrld <- wrld[!grepl("Falk|French Southern", wrld$name_long),]
 ```
 
 You can see there are a lot of columns associated with this file.
@@ -131,7 +135,7 @@ ggplot2 knows the different between continuous and categorical (nominal) data an
 map.cont <- ggplot(wrld.pop.f, aes(long, lat, group = group, fill = continent)) + 
   geom_polygon() + 
   coord_equal() + 
-  labs(x = "Longitude", y = "Latitude", fill = "World Population") + 
+  labs(x = "Longitude", y = "Latitude", fill = "World Continents") + 
   ggtitle("World Continents")
 
 #To see the default colours
