--- a/Section6_References.Rmd
+++ b/Section6_References.Rmd
@@ -66,7 +66,8 @@ Endnotes
     `RSiteSearch("spatial statistics")`. Experiment and see which you
     prefer!
     
-3. The file was downloaded using the following command: `download.file("http://www.openstreetmap.org/trace/1619756/data", destfile = "data/gps-trace.gpx")`.
+3. The file was downloaded using the following command: 
+    "download.file("http://www.openstreetmap.org/trace/1619756/data", destfile = "data/gps-trace.gpx")".
     More information about this ride, and a
     [video](http://www.youtube.com/watch?v=6a8QLiC4LV8&feature=share)
     from it, can be found on
