--- a/chapter.tex
+++ b/chapter.tex
@@ -1858,10 +1858,18 @@ Statistics. 19, 1: 3-28
   \texttt{RSiteSearch("spatial statistics")}. Experiment and see which
   you prefer!
 \item
-  More information about this ride, and a
-  \href{http://www.youtube.com/watch?v=6a8QLiC4LV8\&feature=share}{video}
-  from it, can be found on
-  \href{http://robinlovelace.net/ecotech/2013/10/13/bicycle-trailer-move.html}{robinlovelace.net}.
+  The file was downloaded using the following command:
+\end{enumerate}
+\texttt{download.file("http://www.openstreetmap.org/trace/1619756/data", destfile = "data/gps-trace.gpx")}.
+
+\begin{verbatim}
+More information about this ride, and a
+[video](http://www.youtube.com/watch?v=6a8QLiC4LV8&feature=share)
+from it, can be found on
+[robinlovelace.net](http://robinlovelace.net/ecotech/2013/10/13/bicycle-trailer-move.html).
+\end{verbatim}
+\begin{enumerate}[1.]
+\setcounter{enumi}{3}
 \item
   A complete list of drivers for importing and exporting spatial data
   can be displayed by typing \texttt{getGDALDriverNames()}.
